tmux kill-window without confirmation

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,10 @@ bind-key C-c new-window
 bind-key C-s choose-session
 bind-key C-w choose-window
 
+# No confirmation on kill-window
+bind-key x kill-window
+bind-key C-x kill-window
+
 
 # https://gist.github.com/rsp/f4770a1fe8ea7e2378ac3a16e01a2b53
 # unbind-key C-b
