Turns out alias was allowing additional params fine

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,7 +24,7 @@ bind-key C-c new-window
 # Show sessions
 bind-key C-s choose-session
 bind-key C-w choose-window
-bind-key C-[ copy-mode 
+bind-key C-, copy-mode 
 
 # No confirmation on kill-window
 bind-key x kill-window
