tmux renumber-windows and last option

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+set-option -g renumber-windows on
 set -g prefix C-Space
 
 setw -g mode-keys vi
@@ -29,6 +30,8 @@ bind-key C-, copy-mode
 # No confirmation on kill-window
 bind-key x kill-window
 bind-key C-x kill-window
+bind-key l last-window
+bind-key e select-window -t :-
 
 
 # https://gist.github.com/rsp/f4770a1fe8ea7e2378ac3a16e01a2b53
