--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,3 +1,22 @@
+macos_option_as_alt yes
+
+kitty_mod command
+
+# https://github.com/mikesmithgh/kitty-scrollback.nvim?tab=readme-ov-file
+allow_remote_control socket-only
+listen_on unix:/tmp/kitty
+shell_integration enabled
+
+# kitty-scrollback.nvim Kitten alias
+action_alias kitty_scrollback_nvim kitten /Users/james/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+
+# Browse scrollback buffer in nvim
+map kitty_mod+h kitty_scrollback_nvim
+# Browse output of the last shell command in nvim
+map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
+# Show clicked command output in nvim
+mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
+
 map super+1 goto_tab 1
 map super+2 goto_tab 2
 map super+3 goto_tab 3
