Kitty resize window faster

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,8 @@
 macos_option_as_alt yes
 
+window_resize_step_cells 10
+window_resize_step_lines 10
+
 kitty_mod command
 
 # https://github.com/mikesmithgh/kitty-scrollback.nvim?tab=readme-ov-file
