Some more kitty remaps

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -29,3 +29,6 @@ map super+6 goto_tab 6
 map super+7 goto_tab 7
 map super+8 goto_tab 8
 map super+9 goto_tab 9
+
+map super+shift+, load_config_file
+map super+shift+l goto_layout stack
