kitty resize from nvim

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,6 +7,12 @@ window_resize_step_lines 10
 
 kitty_mod command
 
+# https://github.com/mrjones2014/smart-splits.nvim?tab=readme-ov-file#kitty
+map alt+j kitten pass_keys.py relative_resize down  10 alt+j
+map alt+k kitten pass_keys.py relative_resize up    10 alt+k
+map alt+h kitten pass_keys.py relative_resize left  10 alt+h
+map alt+l kitten pass_keys.py relative_resize right 10 alt+l
+
 # https://github.com/mikesmithgh/kitty-scrollback.nvim?tab=readme-ov-file
 allow_remote_control socket-only
 listen_on unix:/tmp/kitty
