More kitty settings

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -40,3 +40,11 @@ map super+9 goto_tab 9
 
 map super+shift+, load_config_file
 map super+shift+l goto_layout stack
+# https://sw.kovidgoyal.net/kitty/overview/#detach-window
+map super+shift+t detach_window new-tab
+map super+shift+n detach_window
+map super+shift+a detach_window tab-left
+map super+shift+d detach_window tab-right
+map super+shift+s detach_window ask
+
+background_opacity 0.85
