fira code for ligatures

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,8 @@
 macos_option_as_alt yes
-
 confirm_os_window_close 0
+
+# Font
+font_family Fira Code Medium
 
 window_resize_step_cells 10
 window_resize_step_lines 10
