Disable tmux which-key for now

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,7 +51,7 @@ bind-key \\ split-window -v
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'alexwforsythe/tmux-which-key'
+# set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'dracula/tmux'
 
 set -g @dracula-plugins "battery cpu-usage ram-usage git"
