--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -10,31 +10,34 @@ option_as_alt = "Both"
 # Map Mac CMD to Ctrl-Space (my tmux prefix)
 [keyboard]
 bindings = [
-	# New Window Split Horizont
-	{ key = "Return", mods = "Command",  chars = "\u0000\\"},
-	# new Window Split Vertical
-	{ key = "Return", mods = "Command|Shift",  chars = "\u0000|"},
-	{ key = "}", mods = "Command|Shift",  chars = "\u0000n"},
-	{ key = "{", mods = "Command|Shift",  chars = "\u0000p"},
-	{ key = ";", mods = "Command",  chars = "\u0000:"},
-	{ key = "]", mods = "Command",  chars = "\u0000o"},
-	{ key = "[", mods = "Command",  chars = "\u0000;"},
-	{ key = "L", mods = "Command",  chars = "\u0000 "},
-	{ key = "L", mods = "Command|Shift",  chars = "\u0000z"},
-	{ key = "T", mods = "Command",  chars = "\u0000c"},
-	# Detach pane into new tab
-	{ key = "T", mods = "Command|Shift",  chars = "\u0000!"},
-	{ key = "W", mods = "Command",  chars = "\u0000x"},
-	{ key = "G", mods = "Command",  chars = "\u0000["},
-	{ key = "J", mods = "Command",  chars = "\u0000["},
-	{ key = "P", mods = "Command",  chars = "\u0000]"},
-	{ key = "1", mods = "Command",  chars = "\u00000"},
-	{ key = "2", mods = "Command",  chars = "\u00001"},
-	{ key = "3", mods = "Command",  chars = "\u00002"},
-	{ key = "4", mods = "Command",  chars = "\u00003"},
-	{ key = "5", mods = "Command",  chars = "\u00004"},
-	{ key = "6", mods = "Command",  chars = "\u00005"},
-	{ key = "7", mods = "Command",  chars = "\u00006"},
-	{ key = "8", mods = "Command",  chars = "\u00007"},
-	{ key = "9", mods = "Command",  chars = "\u0000e"},
+  # New Window Split Horizont
+  { key = "Return", mods = "Command",  chars = "\u0000\\"},
+  # new Window Split Vertical
+  { key = "Return", mods = "Command|Shift",  chars = "\u0000|"},
+  { key = "}", mods = "Command|Shift",  chars = "\u0000n"},
+  { key = "}", mods = "Command|Shift",  chars = "\u0000n"},
+  { key = "{", mods = "Command|Shift",  chars = "\u0000p"},
+  { key = ";", mods = "Command",  chars = "\u0000:"},
+  { key = "]", mods = "Command",  chars = "\u0000o"},
+  { key = "[", mods = "Command",  chars = "\u0000;"},
+  { key = "L", mods = "Command",  chars = "\u0000 "},
+  { key = "L", mods = "Command|Shift",  chars = "\u0000z"},
+  { key = "S", mods = "Command",  chars = "\u0000s"},
+  { key = "D", mods = "Command",  chars = "\u0000w"},
+  { key = "T", mods = "Command",  chars = "\u0000c"},
+  # Detach pane into new tab
+  { key = "T", mods = "Command|Shift",  chars = "\u0000!"},
+  { key = "W", mods = "Command",  chars = "\u0000x"},
+  { key = "G", mods = "Command",  chars = "\u0000["},
+  { key = "J", mods = "Command",  chars = "\u0000["},
+  { key = "P", mods = "Command",  chars = "\u0000]"},
+  { key = "1", mods = "Command",  chars = "\u00000"},
+  { key = "2", mods = "Command",  chars = "\u00001"},
+  { key = "3", mods = "Command",  chars = "\u00002"},
+  { key = "4", mods = "Command",  chars = "\u00003"},
+  { key = "5", mods = "Command",  chars = "\u00004"},
+  { key = "6", mods = "Command",  chars = "\u00005"},
+  { key = "7", mods = "Command",  chars = "\u00006"},
+  { key = "8", mods = "Command",  chars = "\u00007"},
+  { key = "9", mods = "Command",  chars = "\u0000e"},
 ]
