--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,6 +3,7 @@ confirm_os_window_close 0
 
 # Font
 font_family Fira Code Medium
+font_size 14
 
 window_resize_step_cells 10
 window_resize_step_lines 10
@@ -50,3 +51,41 @@ map super+shift+d detach_window tab-right
 map super+shift+s detach_window ask
 
 background_opacity 0.85
+
+# https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
+# The basic colors
+foreground              #CDD6F4
+# background              #1A1A2A
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
+
+# Cursor colors
+cursor                  #F5E0DC
+cursor_text_color       #1E1E2E
+
+# URL underline color when hovering with mouse
+url_color               #F5E0DC
+
+# Kitty window border colors
+active_border_color     #B4BEFE
+inactive_border_color   #6C7086
+bell_border_color       #F9E2AF
+
+# OS Window titlebar colors
+wayland_titlebar_color  #1E1E2E
+macos_titlebar_color    #1E1E2E
+
+# Tab bar colors
+active_tab_foreground   #11111B
+active_tab_background   #CBA6F7
+inactive_tab_foreground #CDD6F4
+inactive_tab_background #181825
+tab_bar_background      #11111B
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1E1E2E
+mark1_background #B4BEFE
+mark2_foreground #1E1E2E
+mark2_background #CBA6F7
+mark3_foreground #1E1E2E
+mark3_background #74C7EC
