--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -39,7 +39,8 @@ map super+5 goto_tab 5
 map super+6 goto_tab 6
 map super+7 goto_tab 7
 map super+8 goto_tab 8
-map super+9 goto_tab 9
+map super+9 goto_tab -1
+map super+0 select_tab
 
 map super+shift+, load_config_file
 map super+shift+l goto_layout stack
