Scroll up and down kitty shortcuts

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -43,6 +43,9 @@ map super+8 goto_tab 8
 map super+9 goto_tab -1
 map super+0 select_tab
 
+map super+u scroll_page_up
+map super+d scroll_page_down
+
 map super+shift+, load_config_file
 map super+shift+l goto_layout stack
 # https://sw.kovidgoyal.net/kitty/overview/#detach-window
