Tmux default shell and note

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 set-option -g renumber-windows on
+set-option -g default-shell /opt/homebrew/bin/fish
 set -g prefix C-Space
 
 setw -g mode-keys vi
@@ -40,6 +41,12 @@ bind-key e select-window -t :-
 # bind-key 'C-\' send-prefix
 # bind-key \ split-window -h
 # bind-key / split-window -v
+
+# Currently tmux intercepts C-9, C-0 and C-[
+# This fix doesn't work
+# bind -n C-9 send-keys C-9
+# bind -n C-0 send-keys C-0
+
 bind-key | split-window -h
 bind-key 'C-\' split-window -v
 bind-key \\ split-window -v
