--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,6 @@
 macos_option_as_alt yes
 confirm_os_window_close 0
+# Have some issues with vulkan and fish on kitty
 # shell /opt/homebrew/bin/fish
 
 # Font
