Remove the CTRL-j etc shortcuts on tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,10 +9,11 @@ set -g prefix C-Space
 setw -g mode-keys vi
 
 # act like vim
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# bind-key h select-pane -L
+# bind-key j select-pane -D
+# bind-key k select-pane -U
+# bind-key l select-pane -R
+
 
 # Easier key presses so you don't have to take
 # your findger off ctrl
@@ -57,7 +58,7 @@ bind-key \\ split-window -v
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
 # set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'dracula/tmux'
 
