Tmux save scrollback buffer

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,6 +35,14 @@ bind-key C-x kill-window
 bind-key l last-window
 bind-key e select-window -t :-
 
+# Save the scrollback buffer
+# https://unix.stackexchange.com/questions/26548/write-all-tmux-scrollback-to-a-file
+# bind-key P command-prompt -p 'save history to filename:' -I '/tmp/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
+bind-key P 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim /tmp/tmux.history"'
+# bind-key P run-shell 'tmux capture-pane -S -32768 \; save-buffer /tmp/tmux.history \; delete-buffer \; split-window -h "nvim /tmp/tmux.history"'
+
+
+
 
 # https://gist.github.com/rsp/f4770a1fe8ea7e2378ac3a16e01a2b53
 # unbind-key C-b
