--- a/starship.toml
+++ b/starship.toml
@@ -22,7 +22,7 @@ $cmd_duration\
 # format = " took $duration"
 
 [directory]
-style = "fg:#e3e5e5 bg:#769ff0"
+style = "fg:#030505 bg:#769ff0"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
