make tmux.conf more generic

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,9 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 set-option -g renumber-windows on
-set-option -g default-shell /opt/homebrew/bin/fish
+if-shell "[ -f /opt/homebrew/bin/fish ]" \
+    'set-option -g default-shell /opt/homebrew/bin/fish' \
+    'set-option -g default-shell /usr/local/bin/fish'
 set -g prefix C-Space
 
 setw -g mode-keys vi
