--- a/ghostty/config
+++ b/ghostty/config
@@ -28,7 +28,10 @@ keybind = super+ctrl+h=resize_split:left,60
 keybind = super+ctrl+k=resize_split:up,60
 keybind = super+ctrl+l=resize_split:right,60
 keybind = super+ctrl+enter=toggle_split_zoom
+# nvm this
+keybind = super+shift+h=text:vi /
 keybind = super+shift+j=write_screen_file:paste
+keybind = super+alt+shift+j=write_screen_file:open
 
 # custom-shader = /Users/james/Desktop/shaders/glitch.glsl
 # custom-shader = /Users/james/proj/ghostty/src/renderer/shaders/test_shadertoy_crt.glsl
