--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,7 +40,7 @@ bind-key e select-window -t :-
 # Save the scrollback buffer
 # https://unix.stackexchange.com/questions/26548/write-all-tmux-scrollback-to-a-file
 # bind-key P command-prompt -p 'save history to filename:' -I '/tmp/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
-bind-key P 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim /tmp/tmux.history"'
+bind-key P 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim +9999 /tmp/tmux.history"'
 # bind-key P run-shell 'tmux capture-pane -S -32768 \; save-buffer /tmp/tmux.history \; delete-buffer \; split-window -h "nvim /tmp/tmux.history"'
 
 
