--- a/ghostty/config
+++ b/ghostty/config
@@ -29,7 +29,7 @@ keybind = super+ctrl+k=resize_split:up,60
 keybind = super+ctrl+l=resize_split:right,60
 keybind = super+ctrl+enter=toggle_split_zoom
 # nvm this
-keybind = super+shift+h=text:vi /
+keybind = super+shift+h=text:nvim +9999 /
 keybind = super+shift+j=write_screen_file:paste
 keybind = super+alt+shift+j=write_screen_file:open
 
