Kitty config updates

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,7 +5,7 @@ confirm_os_window_close 0
 
 # Font
 font_family Fira Code Medium
-font_size 14
+font_size 17
 
 window_resize_step_cells 10
 window_resize_step_lines 10
@@ -22,6 +22,7 @@ map alt+l kitten pass_keys.py relative_resize right 10 alt+l
 allow_remote_control socket-only
 listen_on unix:/tmp/kitty
 shell_integration enabled
+tab_switch_strategy left
 
 # kitty-scrollback.nvim Kitten alias
 action_alias kitty_scrollback_nvim kitten /Users/james/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
@@ -66,7 +67,7 @@ selection_foreground    #1E1E2E
 selection_background    #F5E0DC
 
 # Cursor colors
-cursor                  #F5E0DC
+cursor                  #FFFF00
 cursor_text_color       #1E1E2E
 
 # URL underline color when hovering with mouse
