Kitty layout fix

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -45,6 +45,10 @@ map super+8 goto_tab 8
 map super+9 goto_tab -1
 map super+0 select_tab
 
+enabled_layouts splits
+map super+backslash launch --location=vsplit
+map super+enter launch --location=hsplit
+
 map super+u scroll_page_up
 map super+d scroll_page_down
 
