--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,12 +24,15 @@ setw -g mode-keys vi
 # eg. prefix + ctrl-n to switch to next window
 # and prefix + ctrl-p to switch to previous window
 bind-key C-n next-window
+bind-key C-o select-pane -t :.+
+bind-key C-space next-layout
 bind-key C-p previous-window
 bind-key C-c new-window
 # Show sessions
 bind-key C-s choose-session
 bind-key C-w choose-window
 bind-key C-, copy-mode 
+bind-key C-r send-keys -t :.+ "r" Enter
 
 # No confirmation on kill-window
 bind-key x kill-window
@@ -41,6 +44,7 @@ bind-key e select-window -t :-
 # https://unix.stackexchange.com/questions/26548/write-all-tmux-scrollback-to-a-file
 # bind-key P command-prompt -p 'save history to filename:' -I '/tmp/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 bind-key P 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim +9999 /tmp/tmux.history"'
+bind-key C-v 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim +9999 /tmp/tmux.history"'
 # bind-key P run-shell 'tmux capture-pane -S -32768 \; save-buffer /tmp/tmux.history \; delete-buffer \; split-window -h "nvim /tmp/tmux.history"'
 
 
