tmux alacritty shortcuts

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -23,7 +23,10 @@ bindings = [
   { key = "}", mods = "Command|Shift",  chars = "\u0000n"},
   { key = "}", mods = "Command|Shift",  chars = "\u0000n"},
   { key = "{", mods = "Command|Shift",  chars = "\u0000p"},
+  { key = "|", mods = "Command|Shift",  chars = "\u0000|"},
+  { key = "\\", mods = "Command",  chars = "\u0000\\"},
   { key = ";", mods = "Command",  chars = "\u0000:"},
+  { key = "r", mods = "Command",  chars = "\u0000\u0012"},
   { key = "]", mods = "Command",  chars = "\u0000o"},
   { key = "[", mods = "Command",  chars = "\u0000;"},
   { key = "L", mods = "Command",  chars = "\u0000 "},
