tmux split in current path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,9 +62,10 @@ bind-key C-v 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-bu
 # bind -n C-9 send-keys C-9
 # bind -n C-0 send-keys C-0
 
-bind-key | split-window -h
-bind-key 'C-\' split-window -v
-bind-key \\ split-window -v
+# https://gist.github.com/william8th/faf23d311fc842be698a1d80737d9631?permalink_comment_id=4260131#gistcomment-4260131
+bind-key | split-window -h -c "#{pane_current_path}"
+bind-key 'C-\' split-window -v -c "#{pane_current_path}"
+bind-key \\ split-window -v -c "#{pane_current_path}"
 
 # set-option xterm-keys off
 # unbind -n S-Enter
