--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,7 +35,7 @@ bind-key C-, copy-mode
 bind-key C-r send-keys -t :.+ "r" Enter
 
 # No confirmation on kill-window
-bind-key x kill-window
+bind-key x kill-pane
 bind-key C-x kill-window
 bind-key l last-window
 bind-key e select-window -t :-
