--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,9 @@ bind-key e select-window -t :-
 # https://unix.stackexchange.com/questions/26548/write-all-tmux-scrollback-to-a-file
 # bind-key P command-prompt -p 'save history to filename:' -I '/tmp/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 bind-key P 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim +9999 /tmp/tmux.history"'
+bind-key Q 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "hx +9999 /tmp/tmux.history"'
 bind-key C-v 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim +9999 /tmp/tmux.history"'
+bind-key C-f 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "hx +9999 /tmp/tmux.history"'
 # bind-key P run-shell 'tmux capture-pane -S -32768 \; save-buffer /tmp/tmux.history \; delete-buffer \; split-window -h "nvim /tmp/tmux.history"'
 
 
