More helix line select shortcuts

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -13,6 +13,8 @@ theme = "ayu_evolve"
 "C-p" = ["extend_to_line_bounds", "yank", "paste_after", "add_newline_above"]
 q.p = ["extend_to_line_bounds", "yank", "paste_after"]
 q.k = "goto_line_end"
+q.j = "extend_to_line_end"
+q.h = "extend_to_line_start"
 g.o = "goto_file_start"
 0 = "goto_line_start"
 Y = "yank_main_selection_to_clipboard"
