testing more tmux shortcuts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,7 @@ bind-key C-r send-keys -t :.+ "r" Enter
 # No confirmation on kill-window
 bind-key x kill-pane
 bind-key C-x kill-window
+bind-key C-e kill-window
 bind-key l last-window
 bind-key e select-window -t :-
 
@@ -66,6 +67,7 @@ bind-key C-f 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-bu
 
 # https://gist.github.com/william8th/faf23d311fc842be698a1d80737d9631?permalink_comment_id=4260131#gistcomment-4260131
 bind-key | split-window -h -c "#{pane_current_path}"
+bind-key C-d split-window -h -c "#{pane_current_path}"
 bind-key 'C-\' split-window -v -c "#{pane_current_path}"
 bind-key \\ split-window -v -c "#{pane_current_path}"
 
