kitty send command to prev window and default layout

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -45,12 +45,20 @@ map super+8 goto_tab 8
 map super+9 goto_tab -1
 map super+0 select_tab
 
-enabled_layouts splits
+# enabled_layouts splits
+enabled_layouts Splits, Fat, Grid, Horizontal, Tall, Vertical
 map super+backslash launch --location=vsplit
 map super+enter launch --location=hsplit
 
 map super+u scroll_page_up
 map super+d scroll_page_down
+# map super+f send_text --match fish foo
+# https://github.com/kovidgoyal/kitty/issues/3147
+map super+ctrl+n combine : previous_window : send_text all r\x0d : previous_window
+map super+j combine : previous_window : send_text all r\x0d : previous_window
+# map super+ctrl+n send_text previous_window r\x0d
+# map super+j send_text previous_window r\x0d
+
 
 map super+shift+, load_config_file
 map super+shift+l goto_layout stack
