--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -46,9 +46,9 @@ map super+9 goto_tab -1
 map super+0 select_tab
 
 # enabled_layouts splits
-enabled_layouts Splits, Fat, Grid, Horizontal, Tall, Vertical
-map super+backslash launch --location=vsplit
-map super+enter launch --location=hsplit
+enabled_layouts Splits, Stack, Fat, Grid, Horizontal, Tall, Vertical
+map super+backslash launch --location=vsplit --cwd=current
+map super+enter launch --location=hsplit --cwd=current
 
 map super+u scroll_page_up
 map super+d scroll_page_down
