--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -28,9 +28,15 @@ tab_switch_strategy left
 action_alias kitty_scrollback_nvim kitten /Users/james/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
 
 # Browse scrollback buffer in nvim
-map kitty_mod+h kitty_scrollback_nvim
+# map kitty_mod+h kitty_scrollback_nvim
+
+# https://github.com/kovidgoyal/kitty/issues/719#issuecomment-580559065
+# https://sw.kovidgoyal.net/kitty/overview/#the-scrollback-buffer
+# map kitty_mod+h launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay hx -
+map kitty_mod+g launch --stdin-source=@screen_scrollback --type=overlay fish -c 'cat > /tmp/kitty.log; hx +9999 /tmp/kitty.log' -
+
 # Browse output of the last shell command in nvim
-map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
+map kitty_mod+h kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 # Show clicked command output in nvim
 mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 
@@ -62,6 +68,7 @@ map super+j combine : previous_window : send_text all r\x0d : previous_window
 
 map super+shift+, load_config_file
 map super+shift+l goto_layout stack
+map super+o goto_layout stack
 # https://sw.kovidgoyal.net/kitty/overview/#detach-window
 map super+shift+t detach_window new-tab
 map super+shift+n detach_window
