fish as default in kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,7 @@
 macos_option_as_alt yes
 confirm_os_window_close 0
 # Have some issues with vulkan and fish on kitty
-# shell /opt/homebrew/bin/fish
+shell /opt/homebrew/bin/fish
 
 # Font
 font_family Fira Code Medium
