move tab backward easier

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -67,6 +67,7 @@ map super+j combine : previous_window : send_text all r\x0d : previous_window
 
 
 map super+shift+, load_config_file
+map super+, move_tab_backward
 map super+shift+l goto_layout stack
 map super+o goto_layout stack
 # https://sw.kovidgoyal.net/kitty/overview/#detach-window
