--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -55,6 +55,7 @@ map super+0 select_tab
 enabled_layouts Splits, Stack, Fat, Grid, Horizontal, Tall, Vertical
 map super+backslash launch --location=vsplit --cwd=current
 map super+enter launch --location=hsplit --cwd=current
+map super+t new_tab_with_cwd
 
 map super+u scroll_page_up
 map super+d scroll_page_down
