Kitty run last command in last active

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -61,11 +61,9 @@ map super+u scroll_page_up
 map super+d scroll_page_down
 # map super+f send_text --match fish foo
 # https://github.com/kovidgoyal/kitty/issues/3147
-map super+ctrl+n combine : previous_window : send_text all r\x0d : previous_window
-map super+j combine : previous_window : send_text all r\x0d : previous_window
-# map super+ctrl+n send_text previous_window r\x0d
-# map super+j send_text previous_window r\x0d
 
+map super+ctrl+n combine : nth_window -1 : send_text all r\x0d : nth_window -1
+map super+j combine : nth_window -1 : send_text all r\x0d : nth_window -1
 
 map super+shift+, load_config_file
 map super+, move_tab_backward
