--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,7 @@ bind-key C-p previous-window
 bind-key C-c new-window
 # Show sessions
 bind-key C-s choose-session
-bind-key C-w choose-window
+bind-key C-w kill-window
 bind-key C-, copy-mode 
 bind-key C-r send-keys -t :.+ "r" Enter
 
@@ -46,7 +46,7 @@ bind-key e select-window -t :-
 # bind-key P command-prompt -p 'save history to filename:' -I '/tmp/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 bind-key P 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim +9999 /tmp/tmux.history"'
 bind-key Q 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "hx +9999 /tmp/tmux.history"'
-bind-key C-v 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim +9999 /tmp/tmux.history"'
+# bind-key C-v 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim +9999 /tmp/tmux.history"'
 bind-key C-f 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "hx +9999 /tmp/tmux.history"'
 # bind-key P run-shell 'tmux capture-pane -S -32768 \; save-buffer /tmp/tmux.history \; delete-buffer \; split-window -h "nvim /tmp/tmux.history"'
 
@@ -69,6 +69,9 @@ bind-key C-f 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-bu
 bind-key | split-window -h -c "#{pane_current_path}"
 bind-key C-d split-window -h -c "#{pane_current_path}"
 bind-key 'C-\' split-window -v -c "#{pane_current_path}"
+bind-key C-v split-window -v -c "#{pane_current_path}"
+bind-key Enter resize-pane -Z
+bind-key C-Enter split-window -v -c "#{pane_current_path}"
 bind-key \\ split-window -v -c "#{pane_current_path}"
 
 # set-option xterm-keys off
