switch panes faster

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,7 @@ bind-key C-r send-keys -t :.+ "r" Enter
 # No confirmation on kill-window
 bind-key x kill-pane
 bind-key C-x kill-window
-bind-key C-e kill-window
+bind-key C-e select-pane -t :.+
 bind-key l last-window
 bind-key e select-window -t :-
 
