--- a/ghostty/config
+++ b/ghostty/config
@@ -7,8 +7,9 @@ window-title-font-family = MesloLGS NF
 font-size = 18
 
 background = #000000
-background-opacity = 0.8
-background-blur-radius = 20
+background-opacity = 0.5
+# background-blur-radius = 20
+background-blur-radius = 5
 shell-integration-features = no-cursor
 macos-non-native-fullscreen = true
 
