--- a/helix/config.toml
+++ b/helix/config.toml
@@ -12,6 +12,10 @@ bufferline = "multiple"
 shell = ["zsh", "-c"]
 # whitespace.render = "all"
 
+[editor.file-picker]
+hidden = false
+git-ignore = false
+
 [keys.normal]
 # C-s = ":w" # Maps Ctrl-s to the typable command :w which is an alias for :write (save file)
 # C-o = ":open ~/.config/helix/config.toml" # Maps Ctrl-o to opening of the helix config file
