--- a/helix/config.toml
+++ b/helix/config.toml
@@ -14,7 +14,7 @@ shell = ["zsh", "-c"]
 
 [editor.file-picker]
 hidden = false
-git-ignore = false
+# git-ignore = false
 
 [keys.normal]
 # C-s = ":w" # Maps Ctrl-s to the typable command :w which is an alias for :write (save file)
