--- a/helix/config.toml
+++ b/helix/config.toml
@@ -10,6 +10,8 @@ theme = "modus_vivendi_deuteranopia"
 [editor]
 bufferline = "multiple"
 shell = ["zsh", "-c"]
+# idle-timeout = 0
+# completion-timeout = 5
 # whitespace.render = "all"
 [editor.file-picker]
 
@@ -53,7 +55,7 @@ g.o = "goto_file_start"
 0 = "extend_to_line_start"
 # Yank to clipboard
 Y = "yank_main_selection_to_clipboard"
-" " = { q = ":q", Q = ":q!", "ret" = "last_picker"}
+" " = { q = ":q", Q = ":q!", "ret" = "last_picker", " " = "global_search"}
 
 [keys.insert]
 j = { k = "normal_mode", i = "normal_mode"}
