kitty layout changing bidnings

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -68,7 +68,10 @@ map super+j combine : nth_window -1 : send_text all r\x0d : nth_window -1
 map super+shift+, load_config_file
 map super+, move_tab_backward
 map super+shift+l goto_layout stack
-map super+o goto_layout stack
+# map super+o goto_layout stack
+map super+o close_other_tabs_in_os_window
+map super+shift+o close_other_tabs_in_os_window
+map super+shift+enter goto_layout stack
 # https://sw.kovidgoyal.net/kitty/overview/#detach-window
 map super+shift+t detach_window new-tab
 map super+shift+n detach_window
