fix decrement / increment

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -40,7 +40,9 @@ q.d = ["extend_to_line_bounds", "delete_selection"]
 q.j = "goto_line_end"
 q.k = "extend_to_line_end"
 "C-e" = "extend_to_line_end"
-# "C-a" = "extend_to_line_start"
+"C-a" = "extend_to_line_start"
+"C-A" = "increment"
+"C-X" = "decrement"
 q.h = "select_all"
 g.o = "goto_file_start"
 0 = "extend_to_line_start"
