Helix yazi Minus

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -68,7 +68,8 @@ m."\"" = "@lf\"lmi\""
 # then leave visual mode
 m.q = "@l/\"|'<ret>lv/<C-r>/<ret><A-minus>hv"
 m.Q = "@l/\"|'<ret>v/<C-r>/<ret><A-minus>v"
-# TODO: ma version
+# TODO: Test with spaces in filename
+"minus" = ["yank_abs_filename_to_clipboard", ":sh kitty @ launch --type=tab fish -c 'y (pbpaste)'"]
 
 [keys.insert]
 "C-c" = "normal_mode"
