--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,7 @@ bind-key C-n next-window
 bind-key C-o select-pane -t :.+
 bind-key C-space next-layout
 bind-key C-p previous-window
-bind-key C-c new-window
+bind-key C-c new-window -c "#{pane_current_path}"
 # Show sessions
 bind-key C-s choose-session
 bind-key C-w kill-window
@@ -43,22 +43,8 @@ bind-key e select-window -t :-
 
 # Save the scrollback buffer
 # https://unix.stackexchange.com/questions/26548/write-all-tmux-scrollback-to-a-file
-# bind-key P command-prompt -p 'save history to filename:' -I '/tmp/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
-bind-key P 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim +9999 /tmp/tmux.history"'
-bind-key Q 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "hx +9999 /tmp/tmux.history"'
-# bind-key C-v 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "nvim +9999 /tmp/tmux.history"'
-bind-key C-f 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "hx +9999 /tmp/tmux.history"'
+bind-key C-f 'capture-pane -S -32768 ; save-buffer /tmp/tmux.history ; delete-buffer ; new-window "chomper /tmp/tmux.history; hx +9999 /tmp/tmux.history"'
 # bind-key P run-shell 'tmux capture-pane -S -32768 \; save-buffer /tmp/tmux.history \; delete-buffer \; split-window -h "nvim /tmp/tmux.history"'
-
-
-
-
-# https://gist.github.com/rsp/f4770a1fe8ea7e2378ac3a16e01a2b53
-# unbind-key C-b
-# set -g prefix 'C-\'
-# bind-key 'C-\' send-prefix
-# bind-key \ split-window -h
-# bind-key / split-window -v
 
 # Currently tmux intercepts C-9, C-0 and C-[
 # This fix doesn't work
