--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -33,10 +33,11 @@ action_alias kitty_scrollback_nvim kitten /Users/james/.local/share/nvim/lazy/ki
 # https://github.com/kovidgoyal/kitty/issues/719#issuecomment-580559065
 # https://sw.kovidgoyal.net/kitty/overview/#the-scrollback-buffer
 # map kitty_mod+h launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay hx -
-map kitty_mod+g launch --stdin-source=@screen_scrollback --type=overlay fish -c 'cat > /tmp/kitty.log; hx +9999 /tmp/kitty.log' -
+map kitty_mod+h launch --stdin-source=@screen_scrollback --type=overlay fish -c 'cat > /tmp/kitty.log; chomper /tmp/kitty.log; hx +9999 /tmp/kitty.log' -
+map kitty_mod+g launch --stdin-source=@screen_scrollback --type=overlay fish -c 'cat > /tmp/kitty.log; chomper /tmp/kitty.log; hx +9999 /tmp/kitty.log' -
 
 # Browse output of the last shell command in nvim
-map kitty_mod+h kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
+# map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 # Show clicked command output in nvim
 mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 
